# haskell-playground

./: .gitignore  Untitled.ipynb
Notebooks/: BinTree.ipynb  HaskellX11.ipynb  ImplicitParams.ipynb  Jira Rest API playing.ipynb  JiraActivtiesRSSpoc.ipynb  Monad.ipynb  RebindableSyntax.ipynb
gitcommander/: git-commander.cabal
gitcommander/src/: Git.hs  Main.hs  Prelude.hs
gitcommander/src/Git/: Types.hs
gitcommander/src/Git/Parser/: Log.hs
gitcommander/test/: Prelude.hs
gitcommander/test/Git/Parser/: LogSpec.hs
human-prelude/: human-prelude.cabal
human-prelude/src/: Prelude.hs
human-prelude/test/: PreludeSpec.hs
imperative-vs-declerative/: imperative-vs-declerative.cabal  numbers.txt  task.feature
imperative-vs-declerative/declerative/: Main.hs
imperative-vs-declerative/imperative/: Main.hs
json-parser/: json-parser.cabal
json-parser/src/: JSON.hs
json-parser/src/JSON/: Parser.hs  Prettify.hs  Type.hs
json-parser/test/: JSONSpec.hs  Main.hs
