name:                human-prelude
version:             0.1.0.0
license:             MIT
author:              Zsigmond Adam Oliver
maintainer:          zsedem@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  Prelude
  build-depends:       base, bytestring,
                       basic-prelude
  default-language:    Haskell2010
  hs-source-dirs: src

test-suite all
  build-depends: QuickCheck,
                 hspec,
                 human-prelude,
                 basic-prelude,
                 base
  type: exitcode-stdio-1.0
  main-is: Main.hs
  buildable: True
  default-language: Haskell2010
  hs-source-dirs: src, test
